--- a/experiments/choose_template-Copy9.ipynb
+++ b/experiments/choose_template-Copy9.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5c486cb5",
+   "execution_count": 8,
+   "id": "501d6989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "66b4f8b3",
+   "execution_count": 9,
+   "id": "246aaff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "1bf46825",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "32054047",
+   "id": "01ab3964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,103 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "dc8cb1f1",
+   "execution_count": 7,
+   "id": "7691a7ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('33020-page1.jpg', 84)\n",
-      "('33020-page1.jpg', 84)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n",
-      "('1. NN-34241-page1.jpg', 86)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "img_folder = Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/GD2/1. CPP/85_Switzerland_equal/total/1_CPP_Page1')\n",
     "\n",
@@ -194,8 +122,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "b9a86067",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Hit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-280e7bed87ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Hit' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Hit = matchTemplates(template, image, N_object=1,\n",
+    "                                 method=5, maxOverlap=0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
-   "id": "92edf205",
+   "id": "579bf5f4",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "856d46b2",
+   "id": "3141f372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4ffa64f2",
+   "id": "21427799",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d1bb07",
+   "id": "0b23739f",
    "metadata": {},
    "outputs": [],
    "source": []
